--- a/samples/sample-01/src/main/resources/application.yml
+++ b/samples/sample-01/src/main/resources/application.yml
@@ -1,4 +1,8 @@
 spring:
   kafka:
+    bootstrap-servers: localhost:9092
+    consumer:
+      enable-auto-commit: true
+      auto-offset-reset: latest
     producer:
       value-serializer: org.springframework.kafka.support.serializer.JsonSerializer
